# CogniDesk

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
client/: .dockerignore  index.html
client/src/: App.jsx
client/src/components/: WorkspaceCard.jsx
client/src/config/: api.js
client/src/pages/: Dashboard.jsx  InterviewPrep.jsx  ResumeAnalyzer.jsx  ResumeRewriter.jsx  Workspace.jsx
client/src/services/: apiClient.js  chatService.js  documentService.js  interviewService.js  resumeAnalyzerService.js  resumeRewriterService.js  workspaceService.js
client/src/styles/: workspace.css
server/: .dockerignore  .env.docker.example  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
server/api/: chat.py  documents.py  interview.py  resume_analyzer.py  resume_rewriter.py  workspaces.py
server/core/: config.py
server/db/: mongo.py
server/models/: chat.py  document.py  resume_analysis.py  workspace.py
server/services/: chat_history_service.py  chat_service.py  chuking_service.py  document_chunk_service.py  embedding_service.py  external_clients.py  interview_service.py  jwt_service.py  pdf_service.py  qdrant_service.py  resume_analysis_service.py  resume_rewriter_service.py  search_service.py  suggestion_service.py  summary_service.py  tavily_service.py  vector_service.py  writer_agent.py
