[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi==0.137.1",
    "openai==2.42.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.2",
    "pymongo>=4.17.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "qdrant-client==1.18.0",
    "requests>=2.34.2",
    "sentence-transformers==5.6.0",
    "tavily-python>=0.7.26",
    "uvicorn==0.49.0",
]
